# simple_cms

./: Cargo.toml
migrations/: 20210209185845_create_cms_test.sql  20210213212407_up_database.sql  20210217100753_create_table.sql  20210225151702_updata.sql
scripts/: init_db.sh
src/: database.rs  database.rs:4:5  lib.rs  main.rs
