[package]
name = "cms-actix"
version = "0.1.0"
authors = ["lnn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.10.0"}
actix-files = "0.5.0"
actix-web = "3.3.2"
env_logger = "0.8.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.61"
sqlx = { version = "0.5.1", features = ["runtime-actix-native-tls", "postgres"] }
time = "0.2.25"
