[package]
name = "cms-actix"
version = "0.1.0"
authors = ["lnn"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
actix-files = "0.5.0"
actix-web = "4.0.0-beta.3"
env_logger = "0.8.2"
futures = "0.3.13"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.61"
sqlx = { version = "0.5.1", features = ["runtime-actix-native-tls", "uuid", "postgres"] }
time = "0.2.25"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca"}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
